# DarkIR

./: DarkIR_384.pt  Network_noFAC_LOLBlur.pt  README.md  app.py  darkir_v2real+lsrw.pt  main.py  pyproject.toml  requirements.txt
archs/: DarkIR.py  __init__.py  arch_model.py  arch_util.py  arch_util_freq.py  network.py
archs/nafnet_utils/: arch_model.py  arch_util.py  local_arch.py
models/: Network_no_attention_light_LOLBlur.pt
models/bests/: Network_no_attention_light_LOLBlur.pt
options/: options.py
options/predict/: LOLBlur.yml
options/train/: All_LOL.yml  LOL.yml  LOLBlur.yml
